cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10088_482615734.yaml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 13.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: NetworkStack/VPC
    Metadata:
      aws:cdk:path: NetworkStack/VPC/Resource
  VPCingressSubnet1SubnetBB7FDF67:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 13.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NetworkStack/VPC/ingressSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet1/Subnet
  VPCingressSubnet1RouteTableEEF02A64:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/ingressSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet1/RouteTable
  VPCingressSubnet1RouteTableAssociation7700457B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCingressSubnet1RouteTableEEF02A64
      SubnetId:
        Ref: VPCingressSubnet1SubnetBB7FDF67
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet1/RouteTableAssociation
  VPCingressSubnet1DefaultRouteC1C9D77C:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCingressSubnet1RouteTableEEF02A64
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet1/DefaultRoute
  VPCingressSubnet2SubnetE30F0091:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 13.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NetworkStack/VPC/ingressSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet2/Subnet
  VPCingressSubnet2RouteTable8565F2D0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/ingressSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet2/RouteTable
  VPCingressSubnet2RouteTableAssociation35C35494:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCingressSubnet2RouteTable8565F2D0
      SubnetId:
        Ref: VPCingressSubnet2SubnetE30F0091
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet2/RouteTableAssociation
  VPCingressSubnet2DefaultRoute8E2F45A7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCingressSubnet2RouteTable8565F2D0
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: NetworkStack/VPC/ingressSubnet2/DefaultRoute
  VPCapplicationSubnet1SubnetFE5BD7C4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 13.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/VPC/applicationSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet1/Subnet
  VPCapplicationSubnet1RouteTable06DA588A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/applicationSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet1/RouteTable
  VPCapplicationSubnet1RouteTableAssociationBD8DBEDA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCapplicationSubnet1RouteTable06DA588A
      SubnetId:
        Ref: VPCapplicationSubnet1SubnetFE5BD7C4
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet1/RouteTableAssociation
  VPCapplicationSubnet2Subnet9AE2E808:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 13.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/VPC/applicationSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet2/Subnet
  VPCapplicationSubnet2RouteTableBE360162:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/applicationSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet2/RouteTable
  VPCapplicationSubnet2RouteTableAssociationB08E8C3F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCapplicationSubnet2RouteTableBE360162
      SubnetId:
        Ref: VPCapplicationSubnet2Subnet9AE2E808
    Metadata:
      aws:cdk:path: NetworkStack/VPC/applicationSubnet2/RouteTableAssociation
  VPCrdsSubnet1Subnet6ED1A3D4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 13.0.4.0/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/VPC/rdsSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet1/Subnet
  VPCrdsSubnet1RouteTableAAE4BCE1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/rdsSubnet1
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet1/RouteTable
  VPCrdsSubnet1RouteTableAssociation2B358732:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCrdsSubnet1RouteTableAAE4BCE1
      SubnetId:
        Ref: VPCrdsSubnet1Subnet6ED1A3D4
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet1/RouteTableAssociation
  VPCrdsSubnet2Subnet7BC222EF:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 13.0.4.16/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/VPC/rdsSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet2/Subnet
  VPCrdsSubnet2RouteTable10277BE0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: NetworkStack/VPC/rdsSubnet2
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet2/RouteTable
  VPCrdsSubnet2RouteTableAssociationBD2B5032:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCrdsSubnet2RouteTable10277BE0
      SubnetId:
        Ref: VPCrdsSubnet2Subnet7BC222EF
    Metadata:
      aws:cdk:path: NetworkStack/VPC/rdsSubnet2/RouteTableAssociation
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: NetworkStack/VPC
    Metadata:
      aws:cdk:path: NetworkStack/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
    Metadata:
      aws:cdk:path: NetworkStack/VPC/VPCGW
  SecurityGroupDD263621:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh access to ec2 instances from anywhere
      GroupName: ssh-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow public ssh access
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NetworkStack/SecurityGroup/Resource
  WebSg75AA54D5:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all http traffic on port 80
      GroupName: http-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow internet access
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NetworkStack/WebSg/Resource
  Role1ABCC5F0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      Description: Allow Security Manager access ec2 instance
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
    Metadata:
      aws:cdk:path: NetworkStack/Role/Resource
  InstanceInstanceProfileAB5AEF02:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: Role1ABCC5F0
    Metadata:
      aws:cdk:path: NetworkStack/Instance/InstanceProfile
  InstanceC1063A87:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: InstanceInstanceProfileAB5AEF02
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      KeyName: asmita23nv
      SecurityGroupIds:
        - Fn::GetAtt:
            - SecurityGroupDD263621
            - GroupId
        - Fn::GetAtt:
            - WebSg75AA54D5
            - GroupId
      SubnetId:
        Ref: VPCingressSubnet1SubnetBB7FDF67
      Tags:
        - Key: Name
          Value: NetworkStack/Instance
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - Role1ABCC5F0
    Metadata:
      aws:cdk:path: NetworkStack/Instance/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/1WPTW/CMAyGfwv3NKM97Yp6QNyiFnGd3NRohtZBiQNCVf/7AoF1O/n146/Xla7Wer2CWyhsfy4G6vTUCtizSuhrQlvp6XCxqj7ywdTKxG4g28aOUR5sUY2LgnvoBlz4wjYhOEsg5Pi3WRlPVxBcduxY0Ce9TfQG99fRV7aRZOt7RBbVoo2e5L71Ll6e5/6BHQcBtphXZj0rglFPjcv+3vFdNt4dacB5Vg0GF30eNuBhxOTpOfKnUDvu6fHMrNj1qE/h41p+6rLS5eoUiAofWWhE3eT4Az9SM5hmAQAA
    Metadata:
      aws:cdk:path: NetworkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
